fix bug in header. simplify header nav and adjust UI spacing

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -19,5 +19,5 @@
 }
 
 :root {
-  --ui-header-height: 6rem;
+  --ui-header-height: 7rem;
 }
